ajuste no título da página

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="css/dycalendar.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Calendário</h1>
+        <h1>Calendário Campanha Forgotten Realms 2020</h1>
 
         <div id="calendarios">
             <table id="tabelaCalendarios" class="tabela-calendarios">
