--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
         <script src="js/jquery-3.4.1.min.js"></script>
         <title>Calendário</title>
         <link href="css/dycalendar.css" rel="stylesheet">
+        <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+        <link rel="manifest" href="images/site.webmanifest">
     </head>
     <body>
         <h1>Calendário Campanha Forgotten Realms 2020</h1>
-
+       
         <div id="calendarios">
             <table id="tabelaCalendarios" class="tabela-calendarios">
-
             </table>
         </div>
 
@@ -20,9 +23,6 @@
         </script>
 
     </body>
-
-
-
 </html>
 
 
